# iris

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_ios.sh  build_macos.sh
samples/animation/: CMakeLists.txt  main.cpp
samples/cubes/: CMakeLists.txt  main.cpp
samples/font/: CMakeLists.txt  main.cpp
samples/jobs/: CMakeLists.txt  main.cpp
samples/networking/: CMakeLists.txt  client.cpp  client_input.h  server.cpp
samples/physics/: CMakeLists.txt  main.cpp  template_info.plist
samples/render_graph/: CMakeLists.txt  main.cpp
samples/sample_browser/: CMakeLists.txt  main.cpp
samples/shadows/: CMakeLists.txt  main.cpp
samples/sprites/: CMakeLists.txt  main.cpp
samples/text_rendering/: CMakeLists.txt  main.cpp
samples/window/: CMakeLists.txt  main.cpp
shaders/: CMakeLists.txt  shader_include.in  shader_string.in
shaders/glsl/: CMakeLists.txt  ambient_occlusion_node_fragment.glsl  ambient_occlusion_node_vertex.glsl  anti_aliasing_node_fragment.glsl  anti_aliasing_node_vertex.glsl  blur_function.glsl  blur_node_chunk.glsl  colour_adjust_node_fragment.glsl  colour_adjust_node_vertex.glsl  colour_node_chunk.glsl  combine_node_chunk.glsl  composite_function.glsl  composite_node_chunk.glsl  declare_property_chunk.glsl  declare_variable_chunk.glsl  fragment_node_chunk.glsl  invert_function.glsl  lerp_node_chunk.glsl  render_node_fragment.glsl  render_node_vertex.glsl  rgb_to_luma_function.glsl  shadow_function.glsl  sky_box_node_fragment.glsl  sky_box_node_vertex.glsl  texture_node_chunk.glsl  value_node_colour_chunk.glsl  value_node_vector3_chunk.glsl  vertex_node_chunk.glsl
shaders/hlsl/: CMakeLists.txt  ambient_occlusion_node_fragment.hlsl  ambient_occlusion_node_vertex.hlsl  anti_aliasing_node_fragment.hlsl  binary_operator_node_chunk.hlsl  blur_function.hlsl  blur_node_chunk.hlsl  camera_node_chunk.hlsl  colour_adjust_node_fragment.hlsl  colour_node_chunk.hlsl  composite_function.hlsl  composite_node_chunk.hlsl  conditional_node_chunk.hlsl  declare_property_chunk.hlsl  fragment_node_chunk.hlsl  invert_function.hlsl  lerp_node_chunk.hlsl  render_node_fragment.hlsl  render_node_vertex.hlsl  rgb_to_luma_function.hlsl  sample.hlsl  set_variable_chunk.hlsl  shader_string.in  shadow_function.hlsl  sin_node_chunk.hlsl  sky_box_node_fragment.hlsl  sky_box_node_vertex.hlsl  texture_node_chunk.hlsl  time_node_chunk.hlsl  value_node_colour_chunk.hlsl  vertex_node_chunk.hlsl
shaders/msl/: CMakeLists.txt  ambient_occlusion_node_fragment.msl  ambient_occlusion_node_vertex.msl  anti_aliasing_node_fragment.msl  arithmetic_node_chunk.msl  blur_function.msl  blur_node_chunk.msl  camera_node_chunk.msl  colour_adjust_node_fragment.msl  colour_node_chunk.msl  combine_node_chunk.msl  component_node_chunk.msl  composite_node_chunk.msl  declare_property_chunk.msl  declare_variable_chunk.msl  fragment_node_chunk.msl  invert_node_chunk.msl  property_chunk.msl  render_node_fragment.msl  render_node_vertex.msl  rgb_to_luma_function.msl  shadow_function.msl  sin_node_chunk.msl  sky_box_node_fragment.msl  sky_box_node_vertex.msl  texture_node_chunk.msl  time_node_chunk.msl  unary_operator_node_chunk.msl  value_node_vector3_chunk.msl  vertex_node_chunk.msl
src/: CMakeLists.txt  iris-config.cmake
src/core/: CMakeLists.txt  camera.cpp  colour.cpp  context.cpp  default_resource_manager.cpp  exception.cpp  looper.cpp  matrix3.cpp  matrix4.cpp  profiler_analyser.cpp  quaternion.cpp  random.cpp  resource_manager.cpp  root.cpp  transform.cpp  utils.cpp  vector3.cpp
src/engine/: CMakeLists.txt  box.cpp  camera.cpp  collision_detector.cpp  collision_resolver.cpp  entity.cpp  event_dispatcher.cpp  hello.cpp  material.cpp  matrix.cpp  matrix3.cpp  matrix4.cpp  mesh.cpp  opengl_render_system.cpp  physics_system.cpp  quaternion.cpp  rigid_body.cpp  texture.cpp  vector3.cpp
src/events/: CMakeLists.txt  event.cpp
src/game/: CMakeLists.txt  game.cpp
src/graphics/: CMakeLists.txt  animation.cpp  animation_blender.cpp  bone.cpp  cube_map.cpp  entity.cpp  instanced_entity.cpp  light.cpp  material.cpp  material_manager.cpp  mesh.cpp  mesh_factory.cpp  mesh_loader.cpp  mesh_manager.cpp  model.cpp  pipeline.cpp  render_command.cpp  render_entity.cpp  render_pipeline.cpp  render_queue_builder.cpp  render_target.cpp  renderer.cpp  sampler.cpp  scene.cpp  shape_factory.cpp  single_animation.cpp  single_entity.cpp  skeleton.cpp  sprite.cpp  stage.cpp  texture.cpp  texture_factory.cpp  texture_manager.cpp  utility.cpp  utils.cpp  vertex_attributes.cpp  window.cpp  yaml_scene_loader.cpp
src/jobs/: CMakeLists.txt  job.cpp  thread.cpp
src/log/: CMakeLists.txt  basic_formatter.cpp  colour_formatter.cpp  emoji_formatter.cpp  file_outputter.cpp  stdout_outputter.cpp
src/networking/: CMakeLists.txt  client_connection_handler.cpp  packet.cpp  server_connection_handler.cpp  simulated_server_socket.cpp  simulated_socket.cpp  udp_server_socket.cpp  udp_socket.cpp
src/physics/: CMakeLists.txt  basic_character_controller.cpp  contact.cpp  physics_system.cpp  plane.cpp
src/platform/: CMakeLists.txt  event.cpp  event_dispatcher.cpp  file_watcher.cpp
src/script/: CMakeLists.txt  ast_printer.cpp  chunk.cpp  compiler.cpp  error.cpp  lexer.cpp  panic_exception.cpp  parser.cpp  script_exception.cpp  virtual_machine.cpp
src/scripting/: CMakeLists.txt
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  auto_release_tests.cpp  colour_tests.cpp  error_handling_tests.cpp  matrix4_tests.cpp  object_pool_tests.cpp  quaternion_tests.cpp  real_tests.cpp  transform_tests.cpp  vector3_tests.cpp
tests/fakes/: fake_light.h  fake_material.h  fake_mesh.h  fake_render_target.h  fake_renderer.h  fake_texture.h
tests/graphics/: CMakeLists.txt  render_command_tests.cpp  render_graph_tests.cpp  render_queue_builder_tests.cpp  renderer_tests.cpp
tests/jobs/: CMakeLists.txt  concurrent_queue_tests.cpp  counter_tests.cpp  fiber_job_system_tests.cpp  fiber_pool_tests.cpp  job_system_tests.h  job_tests.cpp  thread_job_system_tests.cpp  thread_tests.cpp
tests/mocks/: mock_material_manager.h  (+4 more)
(+894 files in other folders)
